feat: added api for accounts
